@@ -91,6 +91,9 @@ gboolean gfunc_backup(gpointer data, gpointer value, gpointer usr);
 gboolean gfunc_remove(gpointer data, gpointer value, gpointer usr);
 gboolean gfunc_substract(gpointer data, gpointer value, gpointer diff);
 gboolean gfunc_remove_path(gpointer data, gpointer value, gpointer path);
+gboolean gfunc_regexp(GSList *l, char *n);
 /* rdup.c */
 void msg(const char *fmt, ...);
+/* getdelim.c */
+ssize_t getdelim(char **lineptr, size_t *n, int delim, FILE *stream);
 #endif  /* _RDUP_H */
