@@ -1,6 +1,7 @@
 xx yyy jjjj: 0.3.5 Miek <miek@miek.nl>
   -- ?? --
-
+   * Added -E file option, with which you can give rdup an exlude
+     list. This list contain extended POSIX regular expressions
 
 15 Dec 2006: 0.3.4 Miek <miek@miek.nl>
   -- bug fix release --
